improve compliance check via URL - remove filename parameter and allow to rerun checks
